final folder structure plus background image added

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>Trip APP</title>
   </head>
-  <body>
+  <body id="root">
     <nav>
       <h2>Welcome</h2>
       <ul>
